Release 8.23.1 Date: Apr 4, 2020   Handle single quote in specimen upload file.   Extend size of collectedby specimen field.   Escape SQL insertion in AntwebUpload.