@@ -39,8 +39,8 @@ public class CompareUtil {
     public static int compareIntString(String s1, String s2) {
         if (s1 == null || "".equals(s1)) return 1;
 	    if (s2 == null  || "".equals(s2))return -1;
-	    int s1Int = (new Integer(s1)).intValue();
-	    int s2Int = (new Integer(s2)).intValue();
+	    int s1Int = (Integer.valueOf(s1)).intValue();
+	    int s2Int = (Integer.valueOf(s2)).intValue();
 	    if (s1Int == s2Int) return 0;
 	    return (s1Int > s2Int) ? 1 : -1;    
     }
